# SGM-Delay

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Installer/: License.rtf  Product.wxs  build-installer.ps1
Source/: DelayEngine.cpp  DelayEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
